compiler/tests/fixtures/parse_err/multiple_errors.vibe
broken( {
  @examples {
    broken([1]) [1]
  }
  x := 
}
